syntax = "proto3";

option go_package = "genproto/";

package library;

message AddBookRequest {
    string title = 1;
    string author = 2;
    int32 year_published = 3;
}

message AddBookResponse {
    string book_id = 1;
}

message SearchBookRequest {
    string query = 1;
}

message SearchBookResponse {
    repeated Book books = 1;
}

message BorrowBookRequest {
    string book_id = 1;
    string user_id = 2;
}

message BorrowBookResponse {
    bool success = 1;
}

message Book {
    string book_id = 1;
    string title = 2;
    string author = 3;
    int32 year_published = 4;
}

service LibraryService {
    rpc AddBook(AddBookRequest) returns (AddBookResponse);
    rpc SearchBook(SearchBookRequest) returns (SearchBookResponse);
    rpc BorrowBook(BorrowBookRequest) returns (BorrowBookResponse);
}
